htmldir = $(prefix)/doc

dist_html_DATA  =  \
  crux-analyze-matches.html \
  crux-create-index.html \
  crux-generate-peptides.html \
  crux-get-ms2-spectrum.html \
  crux.html \
  crux-predict-peptide-ions.html \
  crux-score-peptides-spectrum.html \
  crux-search-for-matches.html \
  customize-tutorial.html \
  home-tutorial.html \
  index-tutorial.html \
  install-tutorial.html \
  parameter-file.html \
  search-tutorial.html \
  start-tutorial.html \
  stylesheet.css \
  data/demo.ms2 \
  data/small-yeast.fasta

EXTRA_DIST = 
